<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIDOW</string>
    <string name="action_settings">设置</string>
    <string name="treatment">按摩治疗</string>
    <string name="tools">准备工具</string>
    <string name="accupoit">穴位定位</string>
    <string name="massages">按摩治疗</string>
    <string name="knowledge">相关知识</string>
    <string name="login">立即登录!</string>
    <string name="myshare">分享</string>
    <string name="about_musicmassage_title">关于</string>
    <string name="desease_1">颈椎病</string>
    <string name="desease_2">肩周炎</string>
    <string name="desease_3">腰痛</string>
    <string name="desease_4">风湿性关节炎</string>
    <string name="desease_5">痛风</string>
    <string name="desease_6">头痛</string>
    <string name="desease_7">腰酸背痛</string>
    <string name="disconnectbluetooth">蓝牙未连接</string>
    <string name="strength">强度</string>
    <string name="strength_number">1/16</string>
    <string name="frequence">频率</string>
    <string name="low_fre">低频</string>
    <string name="mid_fre">中频</string>
    <string name="bluetooth_devices">蓝牙设备</string>
    <string name="pairing">正在配对</string>
    <string name="paired">已配对</string>
    <string name="cancelpair">取消配对</string>
    <string name="search_is_completed">搜索完成</string>
    <string name="disconnect">未连接</string>
    <string name="disconnected">断开连接</string>
    <string name="not_open_device">未打开设备</string>
    <string name="pair">配对</string>
    <string name="startpair">开始配对</string>
    <string name="not_support_device">不支持设备</string>
    <string name="input_user_name">请输入您的用户名</string>
    <string name="input_password_hint">请输入您的密码</string>
    <string name="input_password_confirm">请再次输入您的密码</string>
    <string name="input_email">请输入您的邮箱</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="register">注册</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="user_name_hint">请输入长度为4-20的姓名, 由文字或字母或数字或\"_\",\"-\" 组成</string>
    <string name="not_mail_format">邮箱格式不对</string>
    <string name="login_user_password_hint">请输入密码</string>
    <string name="password_not_same">密码不一致请重新输入</string>
    <string name="user_password_hint">请输入长度为6-16的密码, 由字母, 数字,\"_\",\"-\"组成</string>
    <string name="user_name">用户名</string>
    <string name="password_hint">密码</string>
    <string name="log_in">登录</string>
    <string name="forget_pw">忘记密码</string>
    <string name="login_failed_message">登录失败: 姓名或密码错误</string>
    <string name="no_name_pw">用户名或密码不能为空</string>
    <string name="login_data_error">姓名或密码错误</string>
    <string name="title_activity_video_play">VideoPlay</string>
    <string name="title_activity_media_controller">MediaControllerActivity</string>
    <string name="share">分享</string>
    <string name="sharecontent">物理按摩让你远离亚健康</string>
    <string name="input_serial">请输入序列号：</string>
    <string name="musicname">歌曲名</string>
    <string name="musicartist">艺术家</string>
    <string name="title_activity_guide">guide</string>
    <string name="go_main">去首页</string>
    <string name="user_guide">使用教程</string>
    <string name="gone_ever">以后不在弹出</string>
    <string name="online_shop">网上商城</string>
    <string name="title_activity_massager">MassagerActivity</string>
    <string name="mode">模式</string>
    <string name="time">定时</string>
    <string name="massage_machine_modle1">拳击</string>
    <string name="massage_machine_modle2">针灸</string>
    <string name="massage_machine_modle3">推拿</string>
    <string name="massage_machine_modle4">拨火罐</string>
    <string name="massage_machine_modle5">按摩</string>
    <string name="massage_machine_modle6">刮痧</string>
    <string name="massage_machine_modle7">自动</string>
    <string name="massage_machine_modle8">音乐按摩</string>
    <string name="input_product_number">请输入产品序列号</string>
    <string name="verify">验证</string>
    <string name="server_unnormal">服务器异常，请稍候再试</string>
    <string name="about_us">Post Mail: Hi-Dow International Incorporated 2071 Congressional Drive Saint Louis,MO 63146 U.S.A\n\nTelephone:314-569-2888, 314-569-0888,314-569-6880, 314-991-2888\n\nFax:314-997-0888\n\nEmail:manager@hidow.net\n\nTechnology Development:Guangzhou Health Shine Technology of IOT Co.,Ltd</string>
    <string name="massage_therapy">按摩疗法</string>
    <string name="prefix">按摩疗法可以很好的缓解</string>
    <string name="login_hint">验证产品序列号需要您登录会员账号，请点击确定登录或注册</string>
    <string name="confirm">确定</string>
    <string name="register_fail">注册失败,请重试！</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reset_password">修改密码</string>
    <string name="password">当前密码：</string>
    <string name="new_password">新密码:</string>
    <string name="new_password_confirm">确认新密码：</string>
    <string name="submit">提交</string>
    <string name="reset_password_faile">修改密码失败</string>
    <string name="log_out">退出登录</string>
    <string name="music_massager">音乐按摩</string>
    <string name="disease">疾病</string>
    <string name="therapy_method">治疗方法</string>
    <string name="asx">阿是穴</string>
    <string name="local_music">本地音乐</string>

</resources>
