<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tools"
        android:textColor="@color/colors_viewpager_menu1"
        android:drawableTop="@drawable/ic_viewpager_menu1"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:button="@null"
        android:id="@+id/menu1"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accupoit"
        android:textColor="@color/colors_viewpager_menu1"
        android:drawableTop="@drawable/ic_viewpager_menu2"
        android:layout_weight="1"
        android:gravity="center"
        android:button="@null"
        android:singleLine="true"
        android:id="@+id/menu2"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/massages"
        android:textColor="@color/colors_viewpager_menu1"
        android:drawableTop="@drawable/ic_viewpager_menu3"
        android:layout_weight="1"
        android:gravity="center"
        android:button="@null"
        android:id="@+id/menu3"
        android:singleLine="true"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knowledge"
        android:textColor="@color/colors_viewpager_menu1"
        android:drawableTop="@drawable/ic_viewpager_menu4"
        android:layout_weight="1"
        android:gravity="center"
        android:button="@null"
        android:id="@+id/menu4"
        android:singleLine="true"/>
</RadioGroup>
